--- a/style.css
+++ b/style.css
@@ -23,20 +23,18 @@ p {
   justify-content: center;
   height: 100vh;
   width: 100%;
-  background-color: var(--very-dark-blue);
+  background-color: #141519;
 }
 .card {
   border-radius: 25px;
   padding: 35px;
   max-width: 350px;
-  height: auto;
+  height: 415px;
   margin: 25px;
   background: radial-gradient(
       circle at center 5px,
-      #222,
-      red,
-      green,
-      black 100%
+      hsl(216, 12%, 18%),
+      hsl(216, 32%, 12%) 80%
     )
     no-repeat;
 }
@@ -44,7 +42,7 @@ p {
 .image {
   padding: 1rem;
   border-radius: 50%;
-  background-color: var(--medium-grey);
+  background-color: #262f38;
 }
 .title {
   color: var(--white);
@@ -68,7 +66,7 @@ p {
   border-radius: 50%;
   font-size: 22px;
   cursor: pointer;
-  background-color: var(--medium-grey);
+  background-color: #262f38;
   color: var(--white);
   border: none;
   transition: 0.3s ease;
@@ -77,8 +75,8 @@ p {
   background-color: var(--orange);
 }
 .buttons button:focus {
-  background-color: red;
-  outline: red;
+  background-color: #7c8898;
+
   transition: 0.3s ease-in-out;
 
   transform: scale(1.1) perspective(0px);
@@ -122,7 +120,7 @@ h3 {
   color: var(--orange);
   font-weight: 400;
   font-size: 1rem;
-  background-color: var(--medium-grey);
+  background-color: #262f38;
 }
 .inactive {
   display: none;
